; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_auth_free_master_addrs.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_auth_free_master_addrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auth_addr = type { %struct.auth_addr* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.auth_addr*)* @auth_free_master_addrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @auth_free_master_addrs(%struct.auth_addr* %0) #0 {
  %2 = alloca %struct.auth_addr*, align 8
  %3 = alloca %struct.auth_addr*, align 8
  store %struct.auth_addr* %0, %struct.auth_addr** %2, align 8
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.auth_addr*, %struct.auth_addr** %2, align 8
  %6 = icmp ne %struct.auth_addr* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load %struct.auth_addr*, %struct.auth_addr** %2, align 8
  %9 = getelementptr inbounds %struct.auth_addr, %struct.auth_addr* %8, i32 0, i32 0
  %10 = load %struct.auth_addr*, %struct.auth_addr** %9, align 8
  store %struct.auth_addr* %10, %struct.auth_addr** %3, align 8
  %11 = load %struct.auth_addr*, %struct.auth_addr** %2, align 8
  %12 = call i32 @free(%struct.auth_addr* %11)
  %13 = load %struct.auth_addr*, %struct.auth_addr** %3, align 8
  store %struct.auth_addr* %13, %struct.auth_addr** %2, align 8
  br label %4

14:                                               ; preds = %4
  ret void
}

declare dso_local i32 @free(%struct.auth_addr*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
